fix spacing + add resources page

--- a/styles/article-text.css
+++ b/styles/article-text.css
@@ -10,7 +10,7 @@ p {
 .h0 {
   font-family: -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto,
     "Helvetica Neue", Arial, sans-serif;
-  font-size: 62px;
+  font-size: 50px;
   font-weight: 700;
   color: #f3f3ed;
 }
@@ -27,7 +27,7 @@ h2 {
     "Helvetica Neue", Arial, sans-serif;
   font-size: 35px;
   font-weight: 370;
-  color: hsl(000, 000%, 83%);
+  color: #f3f3ed;
 }
 time {
   font-family: -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto,
@@ -60,10 +60,12 @@ figcaption p {
 }
 
 ul,
+li,
 ol {
   font-family: -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto,
     "Helvetica Neue", Arial, sans-serif;
   font-size: 20px;
+  list-style-position: inside;
   font-weight: 400;
   color: #f3f3ed;
 }
@@ -95,9 +97,9 @@ blockquote {
   padding-left: 20px;
 }
 
-  a {
-    box-shadow: inset 0 -0.25em #c48f94ce;
-  }
+a {
+  box-shadow: inset 0 -0.25em #c48f94ce;
+}
 
 @media (max-width: 8.5in) {
   :root {
